[package]
name = "bricks"
authors = ["Nicola Coretti <nico.coretti@gmail.com>"]
license-file = "LICENSE"
readme = "README.md"
version = "0.1.0"
edition = "2018"

[dependencies]
structopt = "0.3.21"
human-panic = "1.0.3"
clap = "2.33.*"
futures = "0.1.26"
tokio-process = "0.2.3"
tokio = "0.1.18"
failure = "0.1.5"

[[bin]]
name = "trailing"
path = "src/bin/trailing.rs"

[[bin]]
name = "spaces"
path = "src/bin/spaces.rs"

[[bin]]
name = "timeout"
path = "src/bin/timeout.rs"

[lib]
name = "bricks"
path = "src/lib.rs"

