[package]
name = "bricks"
authors = ["Nicola Coretti <nico.coretti@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
version = "0.1.0"
edition = "2021"

[dependencies]
structopt = "0.3.21"
human-panic = "1.0.3"
clap = "2.33.3"
futures = "0.3.13"
tokio-process = "0.2.5"
tokio = {version = "1.3.0", features = ["full"]}
anyhow = "1.0.38"

[dev-dependencies]
assert_cmd = "*"
assert_fs = "*"

[[bin]]
name = "trailing"
path = "src/bin/trailing.rs"

[[bin]]
name = "spaces"
path = "src/bin/spaces.rs"

[[bin]]
name = "timeout"
path = "src/bin/timeout.rs"

[lib]
name = "bricks"
path = "src/lib.rs"

