[package]
name = "formats"
version = "0.1.0"
authors = ["Nicola Coretti <nico.coretti@gmail.com>"]
edition = "2018"

[[bin]]
name = "encode-ase"
path = "src/bin/encode-ase.rs"

[[bin]]
name = "decode-ase"
path = "src/bin/decode-ase.rs"

[dependencies]
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0.64"
nom = "6.1.2"
tobytes = {path = "../tobytes"}
anyhow = "1.0.38"

