[package]
name = "nordic"
version = "0.1.0"
authors = ["Nicola Coretti <nico.coretti@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "nordic"
path = "src/lib.rs"

[dependencies]
cortex-m = "0.5.8"
nostd = { version = "0.1", path = "../nostd" }

