# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "pareidolia"
version = "0.1.0"
authors = ["Nicola Coretti <nico.coretti@gmail.com>"]
edition = "2018"

[lib]
name = 'pareidolia'

[[bin]]
name = 'synalize2json'

[[bin]]
name = 'encode'

[[bin]]
name = 'decode'

[dependencies]
quick-xml = { version = "0.18.1", features = ["serialize"]}
serde = { version = "1.0.105", features = ["derive"]}
human-panic = "1.0.3"
structopt = "0.3.14"
serde_json = "1.0.51"
anyhow = "1.0.31"
nom = "6.0.1"
