# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "preidolia"
version = "0.1.0"
authors = ["Nicola Coretti <nico.coretti@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
name = 'preidolia'

[[bin]]
name = 'synalize2json'

[[bin]]
name = 'encode'

[[bin]]
name = 'decode'

[dependencies]
structopt = "0.3.21"
human-panic = "1.0.3"
quick-xml = { version = "0.22.0", features = ["serialize"] }
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0.64"
anyhow = "1.0.40"
nom = "6.1.2"
bricks = {path= "../bricks", version="0.1.0"}
