[package]
name = "protocols"
version = "0.1.0"
authors = ["Nicola Coretti <nico.coretti@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "tftp-encode"
path = "src/bin/tftp-encode.rs"

[[bin]]
name = "tftp-decode"
path = "src/bin/tftp-decode.rs"

[dependencies]
nom = "6.1.2"
tobytes = { path = "../tobytes" }
bricks = { path = "../bricks" }
preidolia = { path = "../preidolia" }
structopt = "0.3.21"
anyhow = "1.0.40"
human-panic = "1.0.3"
serde = { version= "1.0.125", features=["derive"] }
serde_json = "1.0.64"
tokio = { version = "1.7.1", features = ["full"] }
bytes = "1.0.1"

