[package]
name = "tobytes"
version = "0.1.0"
authors = ["Nicola Coretti <nico.coretti@gmail.com>"]
edition = "2021"
readme = "README.md"
license = "MIT OR Apache-2.0"
description = "A small crate to simplfy type to bytes encoding"
repository = "https://github.com/Nicoretti/spica"
keywords = ["bytes", "encoding"]

