[tool.poetry]
name = "bluetooth-playground"
version = "0.1.0"
description = ""
authors = ["Nicola Coretti <nico.coretti@gmail.com>"]
readme = "README.md"
packages = [{include = "bluetooth_playground"}]

[tool.poetry.dependencies]
python = "^3.11"
bleak = "^0.20.2"
simplepyble = "^0.6.1"
rich = "^13.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
