[project]
name = "end-of-life"
authors = [
    { name = "Nicola Coretti", email = "nico.coretti@gmail.com" },
]
dynamic = ["version", "description"]
readme = "README.rst"
classifiers = [
    "License :: OSI Approved :: MIT License",
]

requires-python = ">=3.11"

dependencies = [
    "requests >=2.6",
    "rich >=13",
    "pydantic >=1.1",
    "typer >= 0.9"
]

[project.optional-dependencies]
dev = [
    "flit >=3.9",
]

docs = [
    "Sphinx>=7.0",
    "shibuya"
]

[project.scripts]
eol = "end_of_life.cli:main"

[tool.flit.module]
name = "end_of_life"

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"