[tool.poetry]
name = "fast-api-playground"
version = "0.1.0"
description = ""
authors = ["Nicola Coretti <nico.coretti@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.85.0"
uvicorn = "^0.18.3"
Jinja2 = "^3.1.2"
aiofiles = "^22.1.0"
databases = "^0.6.1"
aiosqlite = "^0.17.0"
httpx = "^0.23.0"

[tool.poetry.dev-dependencies]
black = "^22.8.0"
isort = "^5.10.1"
nox = "^2022.8.7"
pyupgrade = "^2.38.2"
mypy = "^0.981"
pylint = "^2.15.3"
httpie = "^3.2.1"
prysk = "^0.12.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

